--- a/css/style.css
+++ b/css/style.css
@@ -58,21 +58,26 @@ body{
     font-family: "Trebuchet MS", "Lucida Grande", "Arial"  sans-serif;
 }
 .header-block{
-    max-width: 1300px;
+    width: 1200px;
     margin: 0px auto;
 }
 
 h1.header{
-    padding: 0px 10px;
-    margin-bottom: 20px;
     font-size: 25px;
-    background: url("../images/pencil.png") center center no-repeat;
+    background: url("../images/pencil.png") center bottom no-repeat;
 
+}
+h1.header a{
+    display: inline-block;
+    position: relative;
+    left: -10px;
+    height: 125px;
 }
 h1.header a img{
     width: 290px;
     height: 161px;
 }
+
 .main-block{
  width: 1060px;
  margin: 0px auto;
@@ -165,9 +170,10 @@ h1.header a img{
     font-size: 14px;
     line-height: 20px;
     padding-left: 5px;
-    width: 103px;
+    width: 100px;
     display: inline-block;
     cursor: pointer;
+    overflow: hidden;
 }
 .green{
     color: #0b960b;
