--- a/css/style.css
+++ b/css/style.css
@@ -191,3 +191,8 @@ h1.header a img{
 .gray{
     color: #888888;
 }
+.highlight {
+    border-radius: 0.5em;
+    padding: 0 3px;
+    margin: 0 -3px;
+}
